resources/dsaas/dsaas-production/admin.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: admin
spec:
  host: admin-dsaas-production.09b5.dsaas.openshiftapps.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: f8adminproxy
    weight: 100
  wildcardPolicy: None
